# learn_opencv_c-

./: CMakeLists.txt  README.md  main.cpp
